--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "formik": "^2.4.5",
     "next": "14.1.2",
