--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
+    "@vercel/postgres": "^0.7.2",
     "formik": "^2.4.5",
     "next": "14.1.2",
     "next-auth": "^4.24.7",
