--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@vercel/postgres": "^0.7.2",
+    "bcrypt": "^5.1.1",
     "formik": "^2.4.5",
     "next": "14.1.2",
     "next-auth": "^4.24.7",
