--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "node -r dotenv/config ./scripts/seed.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@vercel/postgres": "^0.7.2",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "next": "14.1.2",
     "next-auth": "^4.24.7",
