--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "@vercel/postgres": "^0.7.2",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
