--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@nextui-org/react": "^2.4.6",
     "@reduxjs/toolkit": "^2.2.1",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
+    "framer-motion": "^11.3.8",
     "next": "14.1.2",
     "next-auth": "^4.24.7",
     "pg": "^8.12.0",
